package interfaces;

public interface Reportable {
    String generateReport();

    double getTotalRevenue();
}
